# backend

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
backend/: asgi.py  urls.py  wsgi.py
backend/settings/: development.py  production.py
ticket_app/: models.py  serializers.py
ticket_app/drivers/database/: models.py
ticket_app/migrations/: 0001_initial.py  0002_alter_event_end_date_alter_event_start_date.py  0003_event_id_planner.py
ticket_app/templates/: response.html
ticket_app/urls/: urls.py
ticket_app/use_cases/accounts/: views.py
ticket_app/views/: accounts.py  events.py  eventsUrls.py
